regression/parse_pool/progtest14.sfp.out

sfc in program parse_pool/progtest14.sfp
syntax error at line 2, position 29:
configuration foo { nullApp nullNet() nullMac() nullRadio() }
                            ^
